style.css
body {
  font-size: 14px;
  font-weight: 400;
  font-family: 'Poppins', sans-serif;
  letter-spacing: -0.25px;
}

h1 {
  font-family: 'Work Sans', sans-serif;
  font-weight: 700;
  font-size: 1.6rem;
  letter-spacing: -0.5px;
}

h2 {
  font-size: 1.25rem;
  font-weight: 700;
}

h3 {
  font-size: 1rem;
}

a:visited {
  color: #9f6167;
}

a:hover {
  color: #411623;
}

a:active {
  color: #411623;
}

ul {
  padding-left: 1rem;
  list-style-type: circle;
}

@media (min-width: 375px) {
  body {
    font-size: 16px;
    max-width: 768px;
    margin: 0 auto;
  }

  h1 {
    font-size: 2rem;
  }

  h2 {
    font-size: 1.5rem;
  }

  li {
    margin-bottom: 0.25rem;
  }
}

@media (min-width: 768px) {
  h1 {
    font-size: 3rem;
  }

  h2 {
    font-size: 2rem;
    margin-bottom: 1.5rem;
  }

  li,
  p {
    font-size: 1.5rem;
    margin-bottom: 1rem;
  }
}

footer {
  padding-right: 1rem;
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  background-color: #9f6167;
  color: white;
  text-align: right;
}

.logo {
  margin: 1rem;
  width: 100%;
  padding-bottom: 4rem;
}

.headline {
  max-width: 425px;
  padding-bottom: 1.5rem;
}

@media (min-width: 768px) {
  .headline {
    max-width: 576px;
  }
}

main {
  max-width: 768px;
  padding: 1.2rem;
}

@media (min-width: 768px) {
  .container {
    margin: 0 auto;
  }
}

.content-block {
  padding-bottom: 45px;
}

#triangle-a {
  width: 0;
  height: 0;
  border-left: 15px solid transparent;
  border-right: 15px solid transparent;
  border-bottom: 30px solid #9f6167;
  float: left;
  animation-name: a;
  animation-duration: 1s;
  animation-delay: 0.5s;
}

#triangle-m {
  width: 0;
  height: 0;
  border-left: 15px solid transparent;
  border-right: 15px solid transparent;
  border-bottom: 30px solid #411623;
  float: left;
  animation-name: a;
  animation-duration: 1s;
  animation-delay: 0.6s;
}

#triangle-mm {
  width: 0;
  height: 0;
  border-left: 15px solid transparent;
  border-right: 15px solid transparent;
  border-bottom: 30px solid #411623;
  float: left;
  animation-name: a;
  animation-duration: 1s;
  animation-delay: 0.7s;
}

.contact {
  margin-left: auto;
}

button {
  color: #9f6167;
  background-color: #fff;
  border: 2px solid #9f6167;
  font-size: 1.5rem;
  padding: 0.5rem;
  margin-top: 2rem;
}

button:hover {
  border-color: #411623;
  color: #411623;
}

@keyframes a {
  from {
    opacity: 0;
    margin-top: 20px;
  }
  to {
    opacity: 1;
    margin-top: 0px;
  }
}

